# postproc-alibava

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
alibavaSkifftools/: CMakeLists.txt  README.md  setup.py  setup.py.in
alibavaSkifftools/python/: SPS2017TB_metadata.py  alibava_analysis.py  analysis_functions.py  marlin_postprocessor.py  steering_processing.py
alibavaSkifftools/python/steering_files/: 01-ab_converter.xml  01-ab_converter_rs.xml  01-telescope_converter.xml  02-cal_extraction.xml  02-ped_preevaluation.xml  02-signal_reconstruction.xml  02-telescope_clustering.xml  03-ab_clustering.xml  03-ped_cmmd_calculation.xml  03-telescope_filter.xml  030-ab_xtcorrection.xml  031-ab_converter.xml  04-cluster_histograms.xml  04-ped_evaluation.xml  04-telescope_alignment.xml  041-telescope_update_gear.xml  05-telescope_fitter.xml  10-merger.xml  11-hitmaker.xml  112-simple_coordinate_finder_DUT.xml  12-prealignment.xml  121-simple_coordinate_finder_DUT.xml  15-create_ntuple.xml  dummy_gear.xml  dummy_lcio.slcio  gear_TB2017_CERNSPS_SETUP00_TELESCOPE_noDUTs.xml  histoinfo_alibava.xml  histoinfo_telescope.xml
include/: AlibavaDiagnosis.h  AlibavaPostProcessor.h  AlibavaSensorAnalysis.h  AuxiliaryStructures.h  IOASAResults.h  IOAlibavaReader.h  IOFortythieves.h  IOManager.h  StripCluster.h  input_options.h
src/: ALIBAVA.h  AlibavaDiagnosis.cxx  AlibavaPostProcessor.cxx  AlibavaSensorAnalysis.cxx  CMakeLists.txt  IOASAResults.cxx  IOAlibavaReader.cxx  IOFortythieves.cxx  IOManager.cxx  StripCluster.cxx  fortythieves.cc
test/: alibavadatatest.raw  skifftools_test.py
